# weapon-fsm-editor

./: .gitignore  README.md  pyproject.toml
demos/: chainsaw.yaml  character_sounds.yaml  default_gun.yaml  full_auto.yaml  semi_auto.yaml  weapon_profile.yaml
libs/asset_integration/compile/: compiler.py  issues.py  parser.py  path_resolution.py  validator.py
libs/asset_integration/model/: actions.py  assets.py  weapon.py
libs/asset_integration/runtime/: commands.py  executor.py
libs/asset_integration/services/: audio_backend.py  editor_audio_backend.py  editor_light_backend.py  light_backend.py
libs/asset_integration/tests/: test_asset_pipeline.py
libs/weapon_fsm_audio/: README.md  pyproject.toml
libs/weapon_fsm_audio/src/weapon_fsm_audio/: __init__.py
libs/weapon_fsm_audio/src/weapon_fsm_audio/application/: __init__.py  config_builder.py
libs/weapon_fsm_audio/src/weapon_fsm_audio/domain/: __init__.py  audio_commands.py  audio_effect.py
libs/weapon_fsm_audio/src/weapon_fsm_audio/infrastructure/runtime/: __init__.py  qt_audio_backend.py
libs/weapon_fsm_audio/src/weapon_fsm_audio/presentation/widgets/: __init__.py  audio_library_browser.py
libs/weapon_fsm_core/: README.md  pyproject.toml
libs/weapon_fsm_core/src/weapon_fsm_core/: __init__.py
libs/weapon_fsm_core/src/weapon_fsm_core/application/: __init__.py  simulate_event.py
libs/weapon_fsm_core/src/weapon_fsm_core/application/builders/: __init__.py  action_factory.py  weapon_profile_builder.py
libs/weapon_fsm_core/src/weapon_fsm_core/domain/: __init__.py  command_schema.py  commands.py  extensions.py  model.py  runtime.py  runtime_types.py  validation.py
libs/weapon_fsm_core/src/weapon_fsm_core/infrastructure/yaml/: __init__.py  mixins.py  profile_builder.py  profile_mapper.py  profile_schema.py  repositories.py  serialization.py
libs/weapon_fsm_core/tests/: test_audio_interrupt.py  test_builder_roundtrip.py  test_demo_presets_roundtrip.py  test_light_sequence_schema.py  test_mashumaro_models.py  test_profile_builder.py  test_profile_extensions.py  test_repository.py  test_runtime_assets.py  test_simulation.py  test_validation.py
libs/weapon_fsm_editor/: README.md  pyproject.toml
libs/weapon_fsm_editor/src/weapon_fsm_editor/: __init__.py  app.py
libs/weapon_fsm_editor/src/weapon_fsm_editor/application/: session_service.py
libs/weapon_fsm_editor/src/weapon_fsm_editor/domain/: session.py
libs/weapon_fsm_editor/src/weapon_fsm_editor/infrastructure/runtime/: __init__.py  command_bridge.py  qt_audio_backend.py  qt_light_backend.py
libs/weapon_fsm_editor/src/weapon_fsm_editor/presentation/: main_window.py
libs/weapon_fsm_editor/src/weapon_fsm_editor/presentation/graph/: __init__.py  machine_html_builder.py  machine_panel.py  machine_view.py  runtime.js
libs/weapon_fsm_editor/src/weapon_fsm_editor/presentation/loop_slicer/: Weapons_0.loop.json  __init__.py  __main__.py  loop_slicer_widget.py
libs/weapon_fsm_editor/src/weapon_fsm_editor/presentation/panels/: event_panel.py  gun_control_panel.py  led_preview_panel.py  summary_panel.py
libs/weapon_fsm_editor/src/weapon_fsm_editor/presentation/weapon_document_editor/: __init__.py  analyzer.py  diagnostics.py  editor.py  highlighter.py  problems_panel.py
libs/weapon_fsm_hardware/: README.md  pyproject.toml
libs/weapon_fsm_hardware/src/weapon_fsm_hardware/: __init__.py  backends.py  dispatcher.py
libs/weapon_fsm_lights/: README.md  pyproject.toml
libs/weapon_fsm_lights/src/weapon_fsm_lights/: __init__.py
libs/weapon_fsm_lights/src/weapon_fsm_lights/domain/: __init__.py  light_sequence.py
libs/weapon_fsm_lights/src/weapon_fsm_lights/infrastructure/: __init__.py
libs/weapon_fsm_lights/src/weapon_fsm_lights/infrastructure/runtime/: __init__.py  qt_light_backend.py
libs/weapon_fsm_lights/src/weapon_fsm_lights/integration/: __init__.py  profile_extension.py
libs/weapon_fsm_lights/src/weapon_fsm_lights/presentation/: __init__.py
libs/weapon_fsm_lights/src/weapon_fsm_lights/presentation/widgets/: __init__.py  led_preview_panel.py
libs/weapon_fsm_lights/tests/: test_light_sequence_schema.py
src/weapon_fsm_workspace/: app.py
src/weapon_fsm_workspace/demos/: C3_hurt.yaml  aiai_fallout.yaml  burst.yaml  chainsaw.yaml  character_sounds.yaml  charge_shot.yaml  charge_shot_ticks.yaml  default_gun.yaml  director_burst_shot_weapon.yaml  director_charge_shot_weapon.yaml  director_full_auto_with_ammo_gun.yaml  director_full_auto_with_ammo_weapon.yaml  full_auto.yaml  (+3 more)
(+18 files in other folders)
