[build-system]
requires = ["uv_build>=0.11.7,<0.12"]
build-backend = "uv_build"

[project]
name = "weapon-fsm-workspace"
version = "0.1.0"
description = "Workspace for the weapon FSM core library and PyQt6 editor"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pyqt6-sip>=13.11.1",
    "pyqt6-webengine>=6.11.0",
    "pyvis>=0.3.2",
    "uv>=0.11.7",
]

[dependency-groups]
dev = [
  "pytest>=8.3",
  "pytest-cov>=5.0",
  "ruff>=0.11",
  "mypy>=1.11",
]

[tool.uv.workspace]
members = [
  "libs/weapon_fsm_core",
  "libs/weapon_fsm_editor",
  "libs/weapon_fsm_hardware",
  "libs/weapon_fsm_audio",
  "libs/weapon_fsm_lights",
]

[tool.uv.sources]
weapon-fsm-core = { workspace = true }
weapon-fsm-editor = { workspace = true }
weapon-fsm-hardware = { workspace = true }
weapon-fsm-audio = { workspace = true }
weapon-fsm-lights = { workspace = true }
