[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "weapon-fsm-editor"
version = "0.1.0"
description = "PyQt6 editor dashboard for weapon FSM profiles"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "PyQt6>=6.7",
  "PyQt6-WebEngine>=6.7",
  "pyvis>=0.3.2",
  "weapon-fsm-core>=0.1.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
