[build-system]
requires = ["uv_build>=0.11.7,<0.12"]
build-backend = "uv_build"

[project]
name = "weapon-fsm-editor"
version = "0.1.0"
description = "PyQt6 editor dashboard for weapon FSM profiles"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "PyQt6>=6.7",
  "PyQt6-WebEngine>=6.7",
  "pyvis>=0.3.2",
  "weapon-fsm-core>=0.1.0",
  "weapon-fsm-hardware>=0.1.0",
  "weapon-fsm-lights>=0.1.0",
  "weapon-fsm-audio>=0.1.0",
]


[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
