[build-system]
requires = ["uv_build>=0.11.7,<0.12"]
build-backend = "uv_build"

[project]
name = "weapon-fsm-hardware"
version = "0.1.0"
description = "Optional audio and light integration layer for weapon FSM runtimes"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "weapon-fsm-core>=0.1.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
