[build-system]
requires = ["uv_build>=0.11.7,<0.12"]
build-backend = "uv_build"

[project]
name = "weapon-fsm-lights"
version = "0.1.0"
description = "Light asset loading, preview widgets, and editing tools for weapon FSM"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "PyYAML>=6.0",
  "PyQt6>=6.7",
  "weapon-fsm-core>=0.1.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
